syntax = "proto3";

option csharp_namespace = "Shared.Application.Protos";

package rateMessages;

service Exchange{
	rpc ConvertCurrencies(CurrencyConvertRequest) returns (CurrencyConvertResponse);
}

message	CurrencyConvertRequest{
	double Amount = 1;
	int32 SenderCurrency = 2;
	int32 ConsumerCurrency = 3;
}

message CurrencyConvertResponse{
	double ConvartationResult = 1;
	int32 ConvertationCurrency = 2;
}